Feature : API for data collection
